--- a/test.css
+++ b/test.css
@@ -1,44 +1,180 @@
+*{
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+}
+
 html, body {
     scroll-behavior: smooth !important;
+    height: fit-content;
+}
+
+html::-webkit-scrollbar {
+    width: 10px; 
+}
+
+html::-webkit-scrollbar-track {
+    background: rgba(0, 0, 0, 0); 
+}
+
+html::-webkit-scrollbar-thumb {
+    background-color: rgba(122, 122, 122, 0.283); 
+    border-radius: 12px; 
+    border: 2px solid rgba(0, 0, 0, 0); 
 }
 
 body {
-    background-color: rgb(44, 44, 44);
-    background-image: repeating-radial-gradient(circle, #ffffff, #c88bce 0%, #ffb2f7 10%);
-    background-size: 100% 55%;
-    background-repeat: no-repeat;
-    background-position: top;
-    max-height: 400px;
+    background-color: black;
+    height: 100vh;
 }
 
+.aboveimgcontainer{
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: fit-content;
+    position: relative;
+    padding-top: 2%;
+}
+
+.bgimg{
+    width: 100%;
+    height: 100%;
+    background-image: url(pictures/homuncbw.jpg);
+    background-size: cover;
+    position: absolute;
+    z-index: -5;
+    opacity: 0.1;
+    filter: blur(8px);
+}
+
+.background {
+    display: flex;
+    height: 100%;
+    width: 100%;
+    padding: 0;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    z-index: -2;
+    overflow: hidden;
+
+}
+.orb1{
+    width: 50%;
+    height: 50%;
+    border-radius: 50%;
+    background-color: #ff74ec38;
+    filter: blur(300px);
+    position: absolute;
+    top: -3vw;
+    left: -10vw;
+}
+
+.orb12{
+    width: 40%;
+    height: 21%;
+    border-radius: 50%;
+    background-color: #02ff2c;
+    filter: blur(300px);
+    position: absolute;
+    top: -20vw;
+    left: -20vw;
+}
+
+.orb2 {
+    width: 50%;
+    height: 50%;
+    border-radius: 50%;
+    background-color: #37b6ff67;
+    filter: blur(250px);
+    position: absolute;
+    top: -20vw;
+    left: 70vw;
+  }
+
+  .orb21{
+    width: 30%;
+    height: 20%;
+    border-radius: 50%;
+    background-color: #ff37a5b6;
+    filter: blur(250px);
+    position: absolute;
+    top: -15vw;
+    left: 70vw;
+  }
+
+  .orb3 {
+    width: 100%;
+    height: 50%;
+    border-radius: 50%;
+    background-color: #0085525e;
+    filter: blur(300px);
+    position: relative;
+    bottom: -20vw;
+    left: 1vw;
+    z-index: 3;
+    overflow: hidden;
+  }
+  
+
+  .allcontent{
+    height: fit-content;
+  }
 
 .content {
+    display: block;
     margin: auto;
-    width: 50%;
+    padding-left: 5%;
+    padding-right: 5%;
+    width: 60%;
+    border-radius: 24px;
+    box-shadow: 0px 0px 20px rgb(0, 0, 0);
+    height: 100%;
+    /* border-right: 2px solid black;
+    border-left: 2px solid black; */
+    background-color: rgba(0, 0, 0, 0.253);
 }
+
+/* .banner{
+    display: hidden;
+    width: 0;
+    height: 0;
+    background-color: #02ff2c;
+    position: fixed;
+    top: 20px;
+} */
 
 
 .cintro {
+    text-align: center;
     color: rgb(242, 175, 223);
     font-family: 'Nunito', sans-serif;
     font-optical-sizing: auto;
     font-weight: 700;
-    font-size: 50px;
+    font-size: 3vw;
     font-style: italic;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 1);
+    margin-top: 2%;
+
     span {
         color: rgb(255, 255, 255);
     }
+
 }
 
 .cpara1 {
     color: rgb(242, 175, 223);
     font-family: 'Nunito', sans-serif;
     font-optical-sizing: auto;
-    font-weight: 600;
-    font-size: 25px;
+    font-weight: normal;
+    font-size: 1.15vw;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
     font-style: normal;
+
+    p{
+        margin-top: 2%;
+    }
 }
 
 .cpara1 span {
@@ -46,18 +182,28 @@ body {
     font-weight: 700;
 }
 
+.list{
+    padding: 2%;
+}
+
+.avatarcontainer{
+    display: grid;
+    place-items: center;
+}
+
 .avatar {
+    margin-top: 4%;
     border-radius: 50%;
     width: auto;
-    height: 300px;
-    border: 8px solid rgb(255, 161, 246);
+    height: 15vw;
+    border: 0.3vw solid rgba(255, 176, 255, 0.096);
     box-shadow: 0 4px 50px 0px;
 }
 
 .projects {
     color: rgb(242, 175, 223);
     font-family: 'Nunito';
-    font-size: 25px;
+    font-size: 1.15vw;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
     font-weight: 700;
 }
@@ -105,18 +251,21 @@ body {
 }
 
 .image-container {
+    width: 100%;
+    height: 40vw;
     display: flex;
     justify-content: flex-start;
     align-items: center;
     flex-wrap: nowrap;
     overflow-x: auto;
-    padding: 10px;
+    z-index: 1;
+    padding: 1%;
     scroll-behavior: smooth;
 }
 
 .image-container img{
     max-width: auto;
-    height: 700px;
+    height: 95%;
     margin: 10px;
     box-shadow: 0px 0px 15px 2px #000000;
     display:flex;
@@ -129,7 +278,8 @@ body {
 }
 
 .cat {
-    height: 400px;
+    margin-top: 2%;
+    height: 20vw;
     width: auto;
     box-shadow: 0px 0px 20px 2px #000000;
     transition: 0.1s ease-out;
@@ -153,4 +303,66 @@ body {
     background-color: rgba(122, 122, 122, 0.283); /* Color of the scrollbar thumb */
     border-radius: 20px; /* Round the corners of the scrollbar thumb */
     border: 3px solid rgba(0, 0, 0, 0); /* Padding around the scrollbar thumb */
+}
+
+@media (max-width: 500px){
+    .content{
+        display: grid;
+        width: 90%;
+    }
+
+    .orb1{
+        top: 1vw;
+        left: -30vw;
+        background-color: #54ff116b;
+    }
+
+    .orb2{
+        top: 1vw;
+        background-color: #37b6ff67;
+    }
+
+    .orb3{
+        top: 150vw;
+        filter: blur(350px);
+        background-color: #610cff42;
+    }
+    
+    .avatarcontainer{
+        display: grid;
+        place-items: center;
+    }
+
+    .avatar{
+        height: 45vw;
+        align-self: center;
+        align-items: center;
+        align-content: center;
+    }
+
+    .cintro{
+        text-align: center;
+        font-size: 10vw;
+
+        span{
+            font-size: 6vw;
+        }
+    }
+
+    .cpara1{
+        margin-top: 3%;
+        font-size: 4vw;
+    }
+
+    .projects{
+        font-size: 4vw;
+
+        img{
+            height: 40vw;
+        }
+    }
+
+    .image-container{
+        height: 100vw;
+    }
 }
